--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
       "@nestjs/platform-express": "^8.0.11",
       "@nestjs/swagger": "^5.1.0",
       "@nestjs/typeorm": "^8.0.2",
+      "bcrpyt": "^2.0.0",
+      "bcrypt": "^5.0.1",
       "mysql": "^2.14.1",
       "mysql2": "^2.3.0",
       "reflect-metadata": "^0.1.10",
