--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
       "@nestjs/typeorm": "^8.0.2",
       "bcrpyt": "^2.0.0",
       "bcrypt": "^5.0.1",
+      "class-transformer": "^0.4.0",
+      "class-validator": "^0.13.1",
       "mysql": "^2.14.1",
       "mysql2": "^2.3.0",
       "reflect-metadata": "^0.1.10",
