--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
       "bcrypt": "^5.0.1",
       "class-transformer": "^0.4.0",
       "class-validator": "^0.13.1",
+      "cookie-parser": "^1.4.5",
+      "express-session": "^1.17.2",
       "mysql": "^2.14.1",
       "mysql2": "^2.3.0",
       "passport": "^0.5.0",
@@ -46,9 +48,13 @@
       "@nestjs/cli": "^7.6.0",
       "@nestjs/schematics": "^8.0.0",
       "@nestjs/testing": "^8.0.11",
+      "@types/bcrypt": "^5.0.0",
+      "@types/cookie-parser": "^1.4.2",
       "@types/express": "^4.17.13",
+      "@types/express-session": "^1.17.4",
       "@types/jest": "^27.0.1",
       "@types/node": "^8.0.29",
+      "@types/passport-local": "^1.0.34",
       "@types/supertest": "^2.0.11",
       "@typescript-eslint/eslint-plugin": "^4.28.2",
       "@typescript-eslint/parser": "^4.28.2",
