--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
       "@nestjs/core": "^8.0.11",
       "@nestjs/passport": "^8.0.1",
       "@nestjs/platform-express": "^8.0.11",
+      "@nestjs/platform-socket.io": "^8.2.0",
       "@nestjs/swagger": "^5.1.0",
       "@nestjs/typeorm": "^8.0.2",
+      "@nestjs/websockets": "^8.2.0",
+      "@types/socket.io": "^3.0.2",
       "bcrpyt": "^2.0.0",
       "bcrypt": "^5.0.1",
       "class-transformer": "^0.4.0",
